# DemoForNative

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mark/demofornative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/inc/openxr_loader/GL/: gl_format.h
app/src/main/cpp/inc/openxr_loader/common/: extra_algorithms.h  filesystem_utils.cpp  gfxwrapper_opengl.c  gfxwrapper_opengl.h  object_info.cpp  object_info.h  platform_utils.hpp
app/src/main/cpp/inc/openxr_loader/utils/: algebra.h  threading.h
app/src/main/cpp/looper/: GLRenderLooper.cpp
app/src/main/cpp/render/: EGLRender.cpp
app/src/main/cpp/sample/: AvatarSample.cpp  BasicLightingSample.cpp  BasicLightingSample.h  BeatingHeartSample.cpp  BezierCurveSample.cpp  BigEyesSample.cpp  BigHeadSample.cpp  BlendingSample.cpp  CloudSample.cpp  ConveyorBeltExample.cpp  CoordSystemSample.cpp  DepthTestingSample.cpp  FBOBlitSample.cpp  FBOLegLengthenSample.cpp  FaceSlenderSample.cpp  GLSampleBase.h  GLTransitionExample.cpp  GLTransitionExample_2.cpp  GLTransitionExample_3.cpp  GLTransitionExample_4.cpp  Instancing3DSample.cpp  MRTSample.cpp  Model3DSample.cpp  MultiLightsSample.cpp  Noise3DSample.cpp  PBOSample.cpp  ParticlesSample.cpp  PortraitStayColorExample.cpp  RotaryHeadSample.cpp  ScratchCardSample.cpp  ShockWaveSample.cpp  SkyBoxSample.cpp  StencilTestingSample.cpp  TextRenderSample.cpp  TextureBuffferSample.cpp  TimeTunnelSample.cpp  UniformBufferSample.cpp  VisualizeAudioSample.cpp
app/src/main/cpp/util/: GLUtils.h
app/src/main/cpp/xr/: check.h  common.h  d3d_common.cpp  d3d_common.h  geometry.h  graphicsapi.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_factory.cpp  graphicsplugin_opengl.cpp  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  hello_xr.1  logger.cpp  logger.h  openxr_program.cpp  openxr_program.h  options.h  pController.cpp  pController.h  pch.cpp  pch.h  platformdata.h  platformplugin.h  platformplugin_android.cpp  platformplugin_factory.cpp  platformplugin_win32.cpp  platformplugin_xlib.cpp
app/src/main/java/com/mark/demofornative/: CommonUtils.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mark/demofornative/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
